# Simulated_Annealing_Algorithm

./: CMakeLists.txt  Graf.cpp  Graf.h  Menu.cpp  Menu.h  Sciezka.cpp  Sciezka.h  SymulowaneWyzarzanie.cpp  SymulowaneWyzarzanie.h  main.cpp
